--- a/plot-weave/client/package.json
+++ b/plot-weave/client/package.json
@@ -14,7 +14,11 @@
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "react-fontawesome": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
