--- a/plot-weave/package.json
+++ b/plot-weave/package.json
@@ -4,6 +4,7 @@
   "proxy": "localhost:3001",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -23,6 +24,7 @@
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
