--- a/plot-weave/package.json
+++ b/plot-weave/package.json
@@ -14,6 +14,7 @@
     "apollo-client": "^2.6.10",
     "aws-sdk": "^2.1370.0",
     "font-awesome": "^4.7.0",
+    "fs": "^0.0.1-security",
     "jwt-decode": "^3.1.2",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
@@ -25,6 +26,8 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-switch": "^7.0.0",
+    "util": "^0.12.5",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
