--- a/plot-weave/package.json
+++ b/plot-weave/package.json
@@ -4,6 +4,7 @@
   "proxy": "localhost:3001",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.341.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
@@ -12,11 +13,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apollo-client": "^2.6.10",
-    "aws-sdk": "^2.1370.0",
+    "aws-sdk": "^2.1386.0",
+    "cloudinary": "^1.37.0",
     "font-awesome": "^4.7.0",
     "fs": "^0.0.1-security",
     "jwt-decode": "^3.1.2",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
